--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
+atomicwrites==1.4.1
+attrs==23.2.0
+more-itertools==10.3.0
 numpy==1.24.4
 packaging==24.0
 pandas==2.0.3
 patsy==0.5.6
+pluggy==0.13.1
+py==1.11.0
+pytest==4.6.9
 python-dateutil==2.9.0.post0
 pytz==2024.1
 scipy==1.10.1
 six==1.16.0
 statsmodels==0.14.1
 tzdata==2024.1
+wcwidth==0.2.13
